--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <title>PvZ: Rise of Battle 投稿区</title>
   <style>
-    body { font-family: sans-serif; max-width: 800px; margin: 40px auto; }
-    h1 { color: #ff6600; }
+    body {
+        margin: 0;
+        padding: 0;
+       background-image: url("https://raw.githubusercontent.com/allenzhang710901/name/main/images/202308241606411839.jpg");
+        background-size: cover;      /* 让背景铺满屏幕 */
+        background-repeat: no-repeat;
+        background-position: center; /* 居中显示 */
+    }
     .box { padding: 16px; border: 1px solid #ccc; border-radius: 8px; }
     label { display: block; margin-top: 8px; }
     input, textarea { width: 100%; box-sizing: border-box; margin-top: 4px; }
