--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         background-size: cover;      /* 让背景铺满屏幕 */
         background-repeat: no-repeat;
         background-position: center; /* 居中显示 */
-      color: white;
+      color: red;
 
     }
     .box { padding: 16px; border: 1px solid #ccc; border-radius: 8px; }
