--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- 现在先给玩家一个投稿说明 -->
     <p>现在想投稿可以：</p>
     <ul>
-      <li>在 QQ 群：XXXXXXXX 中发送你的作品</li>
-      <li>或者发邮件到：yourmail@example.com</li>
+      <li>在 QQ 群：674050288 中发送你的作品</li>
+      <li>或者发邮件到：zhangallen@gmail.com</li>
     </ul>
   </div>
 
