--- a/index.html
+++ b/index.html
@@ -35,17 +35,31 @@
   </div>
 
   <!-- 预留一个表单，将来可以用 JS / 后端来接 -->
-  <div class="box" style="margin-top:20px">
-    <h2>预留表单（以后可接后台）</h2>
-    <label>昵称
-      <input id="name">
-    </label>
-    <label>作品说明 / 关卡ID
-      <textarea id="content" rows="4"></textarea>
-    </label>
-    <button onclick="alert('现在是演示版，还没有真正提交到服务器哦~')">
-      提交（测试）
-    </button>
-  </div>
+  <form name="pvz-submission"
+      method="POST"
+      data-netlify="true"
+      enctype="multipart/form-data"
+      class="box"
+      style="margin-top:20px">
+
+  <!-- Netlify 必须要这个隐藏字段 -->
+  <input type="hidden" name="form-name" value="pvz-submission">
+
+  <h2>在线投稿（可上传图片）</h2>
+
+  <label>昵称
+    <input type="text" name="name" required>
+  </label>
+
+  <label>作品说明 / 关卡ID
+    <textarea name="desc" rows="4" required></textarea>
+  </label>
+
+  <label>上传截图 / 作品图片
+    <input type="file" name="screenshot" accept="image/*" required>
+  </label>
+
+  <button type="submit">提交投稿</button>
+</form>
 </body>
 </html>
