--- a/index.html
+++ b/index.html
@@ -3,30 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <title>PvZ: Rise of Battle 投稿区</title>
+
   <style>
     body {
         margin: 0;
         padding: 0;
-       background-image: url("https://raw.githubusercontent.com/allenzhang710901/name/main/images/202308241606411839.jpg");
-        background-size: cover;      /* 让背景铺满屏幕 */
+        background-image: url("https://raw.githubusercontent.com/allenzhang710901/name/main/images/202308241606411839.jpg");
+        background-size: cover;
         background-repeat: no-repeat;
-        background-position: center; /* 居中显示 */
-      color: red;
-
+        background-position: center;
+        color: white; /* 字体颜色可调 */
+        font-family: Arial, sans-serif;
     }
-    .box { padding: 16px; border: 1px solid #ccc; border-radius: 8px; }
-    label { display: block; margin-top: 8px; }
-    input, textarea { width: 100%; box-sizing: border-box; margin-top: 4px; }
-    button { margin-top: 12px; padding: 8px 16px; }
+
+    .box {
+        padding: 16px;
+        margin: 20px;
+        background: rgba(0, 0, 0, 0.5); /* 半透明背景提升可读性 */
+        border-radius: 8px;
+    }
+
+    label { display: block; margin-top: 10px; }
+    input, textarea {
+      width: 100%;
+      margin-top: 6px;
+      padding: 6px;
+      box-sizing: border-box;
+      border-radius: 4px;
+      border: none;
+    }
+
+    button {
+      margin-top: 16px;
+      padding: 10px 20px;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      background: orange;
+      color: black;
+      font-size: 16px;
+    }
   </style>
 </head>
+
 <body>
-  <h1>PvZ: Rise of Battle 投稿区</h1>
+  <h1 style="text-align:center; text-shadow:2px 2px 4px black;">PvZ: Rise of Battle 投稿区</h1>
 
   <div class="box">
     <p>目前是测试版投稿页面，暂时不会自动保存到数据库，以后会升级成真正的在线投稿系统。</p>
 
-    <!-- 现在先给玩家一个投稿说明 -->
     <p>现在想投稿可以：</p>
     <ul>
       <li>在 QQ 群：674050288 中发送你的作品</li>
@@ -34,32 +59,32 @@
     </ul>
   </div>
 
-  <!-- 预留一个表单，将来可以用 JS / 后端来接 -->
+  <!-- ★★★ Netlify 表单（可上传图片） ★★★ -->
   <form name="pvz-submission"
-      method="POST"
-      data-netlify="true"
-      enctype="multipart/form-data"
-      class="box"
-      style="margin-top:20px">
+        method="POST"
+        data-netlify="true"
+        enctype="multipart/form-data"
+        class="box">
 
-  <!-- Netlify 必须要这个隐藏字段 -->
-  <input type="hidden" name="form-name" value="pvz-submission">
+    <!-- Netlify 表单识别必需隐藏字段 -->
+    <input type="hidden" name="form-name" value="pvz-submission">
 
-  <h2>在线投稿（可上传图片）</h2>
+    <h2>在线投稿（可上传图片）</h2>
 
-  <label>昵称
-    <input type="text" name="name" required>
-  </label>
+    <label>昵称：
+      <input type="text" name="name" required>
+    </label>
 
-  <label>作品说明 / 关卡ID
-    <textarea name="desc" rows="4" required></textarea>
-  </label>
+    <label>作品说明 / 关卡ID：
+      <textarea name="desc" rows="4" required></textarea>
+    </label>
 
-  <label>上传截图 / 作品图片
-    <input type="file" name="screenshot" accept="image/*" required>
-  </label>
+    <label>上传截图 / 作品图片：
+      <input type="file" name="screenshot" accept="image/*">
+    </label>
 
-  <button type="submit">提交投稿</button>
-</form>
+    <button type="submit">提交投稿</button>
+  </form>
+
 </body>
 </html>
