--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <h1 style="text-align:center; text-shadow:2px 2px 4px black;">PvZ: Rise of Battle 投稿区</h1>
 
   <div class="box">
-    <p>目前是测试版投稿页面，暂时不会自动保存到数据库，以后会升级成真正的在线投稿系统。</p>
+    <p>请投稿</p>
 
     <p>现在想投稿可以：</p>
     <ul>
